Handle adherant creation

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,3 +1,5 @@
 ERR_INTERNAL=Something went wrong!
 AUTH_USERNAME_PASSWORD_INVALID=Username or password invalid
 AUTH_ACCESS_DENIED=Access Denied
+cin_exist=cin exist
+photo_too_large=photo_too_large
